# FFMpegTurtorial

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/me/hjhl/app/ffmpegturtorial/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFMpegJNI.cpp
app/src/main/java/me/hjhl/app/ffmpegturtorial/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/hjhl/app/ffmpegturtorial/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
